--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,10 @@ uuid = "fae2e0ce-fbc2-4985-89d7-921c1ae7f515"
 authors = ["Shengjie Xu"]
 version = "1.0.0-DEV"
 
+[deps]
+ControlSystemsBase = "aaaaaaaa-a6ca-5380-bf3e-84a91bcd477e"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+
 [compat]
 julia = "1.6.7"
 
